# Aegis

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  apphosting.yaml  demo.md  firebase.json  package-lock.json  package.json  pyproject.toml  requirements.txt
.audit/: aegis_audit.jsonl
.github/workflows/: ci.yml
agents/: pyproject.toml
agents/cascade/: __init__.py  agent.py
agents/classifier/: agent.py
agents/dispatcher/: agent.py
apps/dashboard/: aegis-ui-web-0.1.0.tgz  apphosting.yaml  package-lock.json  package.json
apps/dashboard/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
apps/dashboard/src/app/drill/: page.tsx
apps/dashboard/src/lib/: actions.ts  ui.tsx
apps/staff/: aegis-ui-web-0.1.0.tgz  package-lock.json  package.json
apps/staff/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
apps/staff/src/app/drill/: page.tsx
apps/staff/src/app/login/: page.tsx
apps/staff/src/app/profile/: page.tsx
apps/staff/src/lib/: actions.ts  ui.tsx  useFcmToken.ts  venue.ts
config/venues/: taj-ahmedabad.json
firebase/: firestore.rules
scripts/: deploy.ps1  deploy_firebase.ps1  seed_venue.py
services/dispatch/: main.py
services/dispatch/tests/: test_dispatch.py
services/ingest/: main.py
services/orchestrator/: main.py
services/shared/aegis_shared/: audit.py  auth.py  config.py  firestore.py  pubsub.py  schemas.py  security.py
services/shared/tests/: test_shared.py
services/vision/: main.py
terraform/: bigquery.tf  iam.tf  pubsub.tf
tests/agent_evals/: test_classifier_eval.py
(+2 files in other folders)
