[project]
name = "aegis-agents"
version = "0.1.0"
description = "Aegis agent suite (classifier, dispatcher, orchestrator, ...)"
requires-python = ">=3.12"
dependencies = [
    "aegis-shared",
    "pydantic>=2.8.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

# Map the ``agents`` package to the directory that holds this pyproject.toml.
# Every sub-package (cascade, classifier, dispatcher, orchestrator) lives at
# ``./<name>/__init__.py`` and is listed explicitly so setuptools installs them
# as ``agents.<name>`` rather than accidentally top-level.
[tool.setuptools]
  packages = [
    "agents",
    "agents.classifier",
    "agents.dispatcher",
    "agents.orchestrator",
  ]
  package-dir = { "agents" = "." }

[tool.uv.sources]
aegis-shared = { path = "../services/shared", editable = true }
